# transfer

./: .env.example  .gitignore  GETTING_STARTED.md  MY_MIGRATION.template.md  README.md  Start Spyt.bat  install.bat  pack-for-home.bat  pyproject.toml  requirements.txt
docs/: GETTING_STARTED.md  HANDOVER.md  MY_MIGRATION.template.md  READ_ME_FIRST.fa.md  READ_ME_FIRST.md
scripts/: Start Spyt.bat  install.bat  pack-for-home.bat
spyt/: __init__.py  __main__.py  backup_filter.py  cli.py  config.py  curl_headers.py  exportify_import.py  matcher.py  migrate.py  models.py  proxy.py  spotify_auth.py  spotify_client.py  wizard.py  ytmusic_client.py
